@@ -1,6 +1,7 @@
 2007-10-21  Robert Ancell  <robert.ancell@gmail.com>
 
 	* Added tests/ dir containing PGN test files
+	* lib/chess/lan.py, pgn.py: Add better support for informal PGN files (Bug #488244)
 
 2007-10-07  Robert Ancell  <robert.ancell@gmail.com>
 
